# qrs

./: .Rhistory  .gitignore  apache-qref.csv  apache.csv  caracteres-es-noAscii.tsv  debian-qrf.tsv  ffmpeg-qref.csv  git-listA.csv~  git-qref.csv  git-ref.org  git-ref.org~  googlemaps.html  haskell-qref.csv  instalar-programas-basicos.sh  linux-qref.csv  linux-qref.tsv  mac-qref.tsv  ocrad-qrg.tsv  postgresql-qref.tsv  powershell.tsv  r-qref.csv  rsqlite.tsv  sqlite.tsv  tmp  tmp.txt  todo.org  ubuntu-qref.csv  ubuntu.csv  unicode.tsv  w3m.tsv  xcode-qref.tsv  xrand-qpdb.sh  xrand-ref.org  xrandr-qpdb.txt  youtube-dl.csv
R/: agregarMirror.org  enviroments.org  links.org  r-abrir-spss.org  r-qref.csv  r-qref.tsv  r-ref.org  rcpp.org  rmarkdown.tsv  ryacas-qref.csv  test.Rmd  test.html  tmp  tmp.csv  tmp.tsv
Rcpp/: CharacterVector.org  README
alge/: alge.tex  alge.tex.bkp  complejos.mate  ecuaciones-lineales-de-congruencia.mate  ecuaciones-lineales-diofanticas.mate  enteros.docx  enteros.html  enteros.md  estruc.html  estructuras-alge.md  fermat.org  matrices.tex  paresCuadrados.R  raices-enesimas.md  tablaTrigo.mate  v2.tex  vectores.tex
analisis-mat/: _region_.tex  analisis-mat.dvi  (+10 more)
cpp/tallerProgramacion/codigo/test/: 01_estaOrdenado_tests.cpp  02_esPrimo_tests.cpp  03_pertenece_tests.cpp  04_desvioEstandar_tests.cpp  05_fibonacci_tests.cpp  06_maximoComunDivisor_tests.cpp  07_sumaDoble_tests.cpp  08_esCapicua_tests.cpp  09_mismos_tests.cpp  10_esPrefijo_tests.cpp  11_maximoProductoEnSerie_tests.cpp  12_minimoProductoEscalar_tests.cpp  CMakeLists.txt  test_aux.h
(+954 files in other folders)
